# helloworld

./: .gitignore  Css-READMD.md  PRODUCT.md  README.md  cpp-build-debug.md  data.js  grid.html  index.html  main.cpp  os-test.py  probability.py  single-file.cpp  t.py  text.text  total.html  vscode.md
a2ui/: README.md  package.json  pnpm-lock.yaml
ai-agent/: .env.example  README.md  package.json  pnpm-lock.yaml  product-1-smart-crawler-prd.md  product-2-knowledge-base-prd.md  product-3-dev-tools-prd.md  product-4-agent-platform-prd.md  roadmap.md
ai-agent-py/: .env-example  README.md  main.py  pyproject.toml
ai-base/: README.md  cuda.py  main.py  pyproject.toml
ai-base/hf/dataset/: hermes.py
ai-base/hf/model/local/: asr.py  token_test.py
ai-base/hf/model/local/voice/: README.md  asr1.py  asr2.py  asr3.py
ai-base/hf/model/online/: asr.py  llm_online.py  test_llm_online.py
ai-base/test/: cache.py  hf_local.py  hf_online.py  test_hf_gemma.py
ai-base/test/dataset/: hermes_online.py
ai-base/test/local/: README.md  bert.py  generate_model.py
ai-base/test/model/local/: cache.py  gpt.py
ai-base/test/model/online/: test_llm_online.py
ai-base/test/online/: test_llm_online.py
animejs-study/: scroll2bottom.html
antd-test/: package.json  webpack.config.js
babel-study/: decorator.js  index.html  package.json
base/: 01-base.html  03-operator.html  04-subject.html
bixi-design/: .eslintignore  .gitignore  .yarnrc  bixi.config.ts  package.json
c-build/: .gitignore  CMakeLists.txt  README.md  REMADE.md
c-build/cmake/: CMakeLists.txt  README.md
c-build/cmake/src/: CMakeLists.txt
c-build/cmake/src/main/: CMakeLists.txt
c-build/cmake/src/tools/: CMakeLists.txt
c-build/include/: README.md
c-build/src/: CMakeLists.txt  CMakeTest.cpp
canvas/: 01.html  02-base.html  template.html
chat-test/: index.html  package.json  pnpm-lock.yaml  sse.js  test.sh
chrome-plugin/: README.md  manifest.json
cloudfare-test/: README.md  index.ts  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  wrangler.toml
code-collet/: README.md  nodemon.json  package.json  window-visible-countdown.html
crawl-framework/: package-lock.json  package.json
crawlee-test/: .eslintrc.json  .gitignore  FEATURE_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_TESTS.md  package-lock.json  package.json  pnpm-lock.yaml  share.md  test.sh  tsconfig.json  vitest.config.ts
crawler/: .gitignore  README.md
css-study/: clip-path.html  flex.html
design-pattern/: README.md  build.mjs  clean.mjs  package.json  tsconfig.json
docker-compose-demo/: docker-compose.yml
echarts/: index.html  line.html  pie.html
egg-example/: package.json
flutter/: README.md  roadmap.md
go-nacos/: .gitignore  CONFIG_INTEGRATION_GUIDE.md  README.md  SERVICE_DEPENDENCY.md  check_nacos_services.sh  demo.sh  (+10 more)
(+1634 files in other folders)
