[project]
name = "ai-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "funasr>=1.3.14",
    "huggingface-hub>=1.20.1",
    "librosa>=0.11.0",
    "requests>=2.34.2",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
